--- a/static/index.html
+++ b/static/index.html
@@ -81,17 +81,21 @@
 
         /* 히어로 섹션 */
         .hero {
+            width: 100vw;
             height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
             position: relative;
             background: linear-gradient(135deg, #ff9ec500, #ffa8cc00, #ffb3d100);
+            overflow: hidden;
         }
 
         .hero-content {
             text-align: center;
             z-index: 2;
+            max-width: 100%;
+            padding: 2rem;
         }
 
         .hero-title {
@@ -114,7 +118,7 @@
         }
 
         .hero-subtitle {
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             color: #fff;
             margin-bottom: 2rem;
             opacity: 0.9;
@@ -444,7 +448,7 @@
         }
     </style>
 </head>
-<body style="background-image: url('/static/studio_image.jpg'); background-size: contain; background-repeat: no-repeat;">
+<body style="background-image: url('/static/studio_image.jpg'); background-size: cover; background-repeat: no-repeat;">
     <!-- 헤더 -->
     <header class="header">
         <nav class="nav">
@@ -470,7 +474,7 @@
             <div class="shape"></div>
             <div class="shape"></div>
         </div>
-        <div class="hero-content" style="position: absolute; top: 35rem;">
+        <div class="hero-content" style="position: absolute; top: 25rem;">
             <h1 class="hero-title">
                 <!-- <span class="color-text">COLOR</span><br>
                 <span class="studio-text">STUDIO</span> -->
